--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AlanDuong07.github.io",
-  "homepage": "http://AlanDuong07.github.io/AlanDuong07.github.io",
+  "homepage": "http://AlanDuong07.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
