--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "AlanDuong07.github.io",
-  "homepage": "http://AlanDuong07.github.io/",
+  "name": "Personal-Website-2021",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,9 +17,7 @@
     "start": "BROWSER='microsoft edge' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -39,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
